export const snapshot = {};

snapshot[`writeAll > direct import 1`] = `
'import { assertEquals } from "https://deno.land/std@0.205.0/assert/assert_equals.ts";
import { createGraph } from "https://deno.land/x/deno_graph@0.59.2/mod.ts";
import emoji from "npm:node-emoji@2.1.0";
import { noop } from "./lib.ts";'
`;

snapshot[`writeAll > direct import 2`] = `
'import { assertExists } from "https://deno.land/std@0.205.0/assert/assert_exists.ts";
export const noop = () => {};'
`;

snapshot[`writeAll > import map 1`] = `
'{
  "imports": {
    "std/": "https://deno.land/std@0.205.0/",
    "deno_graph": "https://deno.land/x/deno_graph@0.59.2/mod.ts",
    "node-emoji": "npm:node-emoji@2.1.0",
    "/": "./"
  }
}'
`;

snapshot[`writeAll > import map 2`] = `
'import { VERSION } from "https://deno.land/std@0.205.0/version.ts";
export const noop = () => {};'
`;

snapshot[`writeAll > import map with no resolve 1`] = `'import {} from "https://deno.land/std@0.205.0/testing/asserts.ts";'`;

snapshot[`writeAll > unversioned specifiers 1`] = `
'import { VERSION } from "https://deno.land/std@0.205.0";
import { createGraph } from "https://deno.land/x/deno_graph@0.59.2/mod.ts";
import { emojify } from "npm:node-emoji@2.1.0";
import { noop } from "./lib.ts";'
`;

snapshot[`writeAll > unversioned specifiers 2`] = `
'import { VERSION } from "https://deno.land/std@0.205.0/version.ts";
export const noop = () => {};'
`;
